# pyreaddbc

./: .releaserc.json  CHANGELOG.md  MANIFEST.in  Makefile  build.py  pyproject.toml  setup.py
.github/workflows/: build.yaml  publish.yaml  release.yaml
conda/: dev.yaml
pyreaddbc/: __init__.py  _build_readdbc.py  _readdbcmodule.c  readdbc.py
pyreaddbc/c-src/: dbc2dbf.c
tests/: test_pyreaddbc.py
