[build-system]
requires = ["setuptools>=61.0.0,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyreaddbc"
version = "1.1.0"  # changed by semantic-release
description = "pyreaddbc package"
readme = "README.md"
authors = [
    {name = "Flavio Codeco Coelho", email = "fccoelho@gmail.com"},
    {name = "Sandro Loch", email = "es.loch@gmail.com"},
    {name = "Luã Vacaro", email = "luabidaa@gmail.com"},
]
license = {text = "AGPL-3.0"}
requires-python = ">=3.9,<4"
dependencies = ["dbfread>=2.0.7,<3"]

[tool.setuptools]
packages = ["pyreaddbc"]

[tool.poetry.group.dev.dependencies]
pandas = "^2.1.0"
black = ">=22.6.0"
isort = ">=5.10.1"
flake8 = ">=5.0.4"
pre-commit = ">=2.20.0"
pytest = ">=7.1.2"
commitizen = ">=2.32.2"
chardet = ">=5.2.0"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_*"

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ["py39", "py310", "py311"]
exclude = "docs/"
